@@ -4,7 +4,6 @@ import com.google.protobuf.ByteString;
 import io.dgraph.DgraphProto;
 import io.vavr.control.Either;
 import io.vavr.control.Option;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -71,26 +70,26 @@ final class DgraphMutations {
                            uuid);
    }
 
-   private DgraphSourceIds getSourceId(final CustomSourceId sourceId) {
-      if (StringUtils.isBlank(sourceId.facility()) || StringUtils.isBlank(sourceId.patient())) {
-         return new DgraphSourceIds(List.of());
-      }
-      final String query = String.format(Locale.ROOT, """
-                                                      query query_source_id() {
-                                                         var(func: eq(SourceId.facility, "%s")) {
-                                                            A as uid
-                                                         }
-                                                         var(func: eq(SourceId.patient, "%s")) {
-                                                            B as uid
-                                                         }
-                                                         all(func: uid(A,B)) @filter (uid(A) AND uid(B)) {
-                                                            uid
-                                                            expand(SourceId)
-                                                         }
-                                                      }
-                                                      """, sourceId.facility(), sourceId.patient());
-      return DgraphQueries.runSourceIdQuery(query);
-   }
+//   private DgraphSourceIds getSourceId(final CustomSourceId sourceId) {
+//      if (StringUtils.isBlank(sourceId.facility()) || StringUtils.isBlank(sourceId.patient())) {
+//         return new DgraphSourceIds(List.of());
+//      }
+//      final String query = String.format(Locale.ROOT, """
+//                                                      query query_source_id() {
+//                                                         var(func: eq(SourceId.facility, "%s")) {
+//                                                            A as uid
+//                                                         }
+//                                                         var(func: eq(SourceId.patient, "%s")) {
+//                                                            B as uid
+//                                                         }
+//                                                         all(func: uid(A,B)) @filter (uid(A) AND uid(B)) {
+//                                                            uid
+//                                                            expand(SourceId)
+//                                                         }
+//                                                      }
+//                                                      """, sourceId.facility(), sourceId.patient());
+//      return DgraphQueries.runSourceIdQuery(query);
+//   }
 
    private boolean updateGoldenRecordPredicate(
          final String goldenId,
@@ -210,9 +209,9 @@ final class DgraphMutations {
                                                                         .setSetNquads(ByteString.copyFromUtf8(createSourceIdTriple(
                                                                               interaction.sourceId())))
                                                                         .build();
-      final var sourceId = getSourceId(interaction.sourceId()).all();
-      final var sourceIdUid = !sourceId.isEmpty()
-            ? sourceId.get(0).uid()
+      final var sourceIdList = DgraphQueries.findSourceIdList(interaction.sourceId().facility(), interaction.sourceId().patient());
+      final var sourceIdUid = !sourceIdList.isEmpty()
+            ? sourceIdList.getFirst().uid()
             : DgraphClient.getInstance().doMutateTransaction(sourceIdMutation);
       final DgraphProto.Mutation mutation = DgraphProto.Mutation.newBuilder()
                                                                 .setSetNquads(ByteString.copyFromUtf8(CustomDgraphMutations.createInteractionTriple(
@@ -348,9 +347,9 @@ final class DgraphMutations {
       final List<DgraphPairWithScore> interactionScoreList = new ArrayList<>();
       interactionScoreList.add(new DgraphPairWithScore(goldenIdScore.goldenId(), result.interactionUID, goldenIdScore.score()));
       addScoreFacets(interactionScoreList);
-      addSourceId(interactionScoreList.get(0).goldenUID(), result.sourceUID);
-      final var grUID = interactionScoreList.get(0).goldenUID();
-      final var theScore = interactionScoreList.get(0).score();
+      addSourceId(interactionScoreList.getFirst().goldenUID(), result.sourceUID);
+      final var grUID = interactionScoreList.getFirst().goldenUID();
+      final var theScore = interactionScoreList.getFirst().score();
       return new LinkInfo(grUID, result.interactionUID, result.sourceUID, theScore);
    }
 
